logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -159,7 +159,7 @@ div[data-testid="stPopoverBody"] .stVerticalBlock {
   flex: 1 1 auto;
   justify-content: center;
   align-items: center;
-  margin-top: 6rem !important;
+  margin-top: 5rem !important;
   margin-bottom: 2rem !important;
   margin-left: 0rem !important;
   margin-right: 0rem !important;
@@ -243,6 +243,6 @@ h1, h2, h3 {
     display: flex !important;
   }
   .st-key-body-container {
-    margin-top: 3rem;
+    margin-top: 4rem;
   }
 }
